--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "uuid": "^9.0.1"
   },
