--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
+    "nodemailer": "^6.9.13",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
